@@ -24,7 +24,7 @@ namespace EQExtractor2
 
     public partial class EQExtractor2Form1 : Form
     {
-        string Version = "EQExtractor2 Version 2.0.5 SVN";
+        string Version = "EQExtractor2 Version 2.0.6 SVN";
 
         static int PacketsSeen = 0;
         static long BytesRead = 0;
